src/flake8_datetimez/snapshots/ruff__flake8_datetimez__tests__DTZ002_DTZ002.py.snap
---
source: src/flake8_datetimez/mod.rs
expression: checks
---
- kind: CallDatetimeToday
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 25
  fix: ~
- kind: CallDatetimeToday
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 16
  fix: ~

