src/flake8_datetimez/snapshots/ruff__flake8_datetimez__tests__DTZ003_DTZ003.py.snap
---
source: src/flake8_datetimez/mod.rs
expression: checks
---
- kind: CallDatetimeUtcnow
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 26
  fix: ~
- kind: CallDatetimeUtcnow
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 17
  fix: ~

