src/flake8_datetimez/snapshots/ruff__flake8_datetimez__tests__DTZ005_DTZ005.py.snap
---
source: src/flake8_datetimez/mod.rs
expression: checks
---
- kind:
    CallDatetimeNowWithoutTzinfo: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 23
  fix: ~
  parent: ~
- kind:
    CallDatetimeNowWithoutTzinfo: ~
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 48
  fix: ~
  parent: ~
- kind:
    CallDatetimeNowWithoutTzinfo: ~
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 27
  fix: ~
  parent: ~
- kind:
    CallDatetimeNowWithoutTzinfo: ~
  location:
    row: 13
    column: 0
  end_location:
    row: 13
    column: 30
  fix: ~
  parent: ~
- kind:
    CallDatetimeNowWithoutTzinfo: ~
  location:
    row: 18
    column: 0
  end_location:
    row: 18
    column: 14
  fix: ~
  parent: ~

