src/flake8_datetimez/snapshots/ruff__flake8_datetimez__tests__DTZ007_DTZ007.py.snap
---
source: src/flake8_datetimez/mod.rs
expression: checks
---
- kind: CallDatetimeStrptimeWithoutZone
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 53
  fix: ~
- kind: CallDatetimeStrptimeWithoutZone
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 52
  fix: ~
- kind: CallDatetimeStrptimeWithoutZone
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 43
  fix: ~
- kind: CallDatetimeStrptimeWithoutZone
  location:
    row: 14
    column: 0
  end_location:
    row: 14
    column: 52
  fix: ~
- kind: CallDatetimeStrptimeWithoutZone
  location:
    row: 17
    column: 0
  end_location:
    row: 17
    column: 52
  fix: ~

