src/flake8_datetimez/snapshots/ruff__flake8_datetimez__tests__DTZ011_DTZ011.py.snap
---
source: src/flake8_datetimez/mod.rs
expression: checks
---
- kind: CallDateToday
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 21
  fix: ~
- kind: CallDateToday
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 12
  fix: ~

