src/flake8_datetimez/snapshots/ruff__flake8_datetimez__tests__DTZ012_DTZ012.py.snap
---
source: src/flake8_datetimez/mod.rs
expression: checks
---
- kind:
    CallDateFromtimestamp: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 33
  fix: ~
  parent: ~
- kind:
    CallDateFromtimestamp: ~
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 24
  fix: ~
  parent: ~

